--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "watchman": "^1.0.0"
+    "@react-navigation/native": "^6.1.17",
+    "expo": "^51.0.13",
+    "watchman": "^1.0.0",
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.1"
   }
 }
